--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
-  "name": "bunnestts",
+  "name": "huangbunests",
   "module": "index.ts",
   "type": "module",
   "author": "Webeleon <julien@webeleon.dev>",
-  "description": "Proof of concept NestJS X Bun",
+  "description": "Proof of concept NestJS X Angular X Bun",
   "private": true,
   "scripts": {
-    "api": "bun run api/bootstrap.ts",
-    "api:dev": "bun run api/bootstrap.ts --watch",
-    "api:debug": "bun --inspect api/bootstrap.ts --watch"
+    "api": "bun run --inspect api/bootstrap.ts --watch",
+    "webapp": "bun run ng serve",
+    "dev": "concurrently \"bun run api\" \"bun run webapp\""
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "@angular/animations": "^19.2.0",
+    "@angular/common": "^19.2.0",
+    "@angular/compiler": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/forms": "^19.2.0",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-browser-dynamic": "^19.2.0",
+    "@angular/router": "^19.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.9",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0",
+    "concurrently": "^7.0.0"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -22,6 +38,16 @@
     "@nestjs/common": "^11.0.11",
     "@nestjs/core": "^11.0.11",
     "@nestjs/platform-express": "^11.0.11",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "@angular-devkit/build-angular": "^19.2.0",
+    "@angular/cli": "^19.2.0",
+    "@angular/compiler-cli": "^19.2.0",
+    "@types/jasmine": "~5.1.0",
+    "jasmine-core": "~5.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0"
   }
 }
