feat: webapp build

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "api": "bun run --inspect api/bootstrap.ts --watch",
     "webapp": "bun run ng serve",
-    "dev": "concurrently \"bun run api\" \"bun run webapp\""
+    "dev": "concurrently \"bun run api\" \"bun run webapp\"",
+    "webapp:build": "bun run ng build"
   },
   "devDependencies": {
     "@types/bun": "latest",
