--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "webapp:test": "bun run ng test"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "prettier": "^3.5.3",
     "@angular/animations": "^19.2.0",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
@@ -24,13 +22,16 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@types/bun": "latest",
+    "@types/compression": "^1.7.5",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^7.0.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.9",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0",
-    "concurrently": "^7.0.0"
+    "zone.js": "~0.15.0"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -44,6 +45,7 @@
     "@nestjs/core": "^11.0.11",
     "@nestjs/platform-express": "^11.0.11",
     "@types/jasmine": "~5.1.0",
+    "compression": "^1.8.0",
     "helmet": "^8.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
