--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nestjs/common": "^11.0.11",
     "@nestjs/core": "^11.0.11",
     "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/swagger": "^11.0.6",
     "@types/jasmine": "~5.1.0",
     "compression": "^1.8.0",
     "helmet": "^8.1.0",
