--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "concurrently \"bun run api\" \"bun run webapp\"",
     "webapp": "bun run ng serve",
     "webapp:build": "bun run ng build",
-    "webapp:test": "bun run ng test"
+    "webapp:test": "bun run ng test",
+    "build:api-client": "bun run openapi-generator-cli generate -i ./openapi.json -g typescript-angular -o ./generated-api-client-angular --additional-properties=npmName=hu-api,ngVersion=19"
   },
   "devDependencies": {
     "@angular/animations": "^19.2.0",
@@ -22,6 +23,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@openapitools/openapi-generator-cli": "^2.18.4",
     "@types/bun": "latest",
     "@types/compression": "^1.7.5",
     "autoprefixer": "^10.4.20",
