chore: plug the api client in the frontend

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "description": "Proof of concept NestJS X Angular X Bun",
   "private": true,
   "scripts": {
-    "api": "bun run --inspect api/bootstrap.ts --watch",
-    "build:api-client": "bun run api/open-api.ts && bun run openapi-generator-cli generate -i ./openapi.json -g typescript-rxjs -o ./generated-api-client",
+    "api": "bun run --inspect --watch api/bootstrap.ts",
+    "build:api-client": "rm -rf dist && bun run api/open-api.ts && bun run openapi-generator-cli generate -i ./openapi.json -g typescript-rxjs -o ./generated-api-client",
     "dev": "concurrently \"bun run api\" \"bun run webapp\"",
     "webapp": "bun run ng serve",
     "webapp:build": "bun run ng build",
@@ -48,6 +48,8 @@
     "@nestjs/platform-express": "^11.0.11",
     "@nestjs/swagger": "^11.0.6",
     "@types/jasmine": "~5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "compression": "^1.8.0",
     "helmet": "^8.1.0",
     "jasmine-core": "~5.6.0",
