--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "noEmit": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true
-  }, 
+    "allowSyntheticDefaultImports": true,
+    "strictPropertyInitialization": false
+  },
   "exclude": ["node_modules", "dist"]
 }
