--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.0.9",
+    "tailwindcss": "^4.0.15",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -47,6 +47,7 @@
     "@nestjs/core": "^11.0.11",
     "@nestjs/platform-express": "^11.0.11",
     "@nestjs/swagger": "^11.0.6",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/jasmine": "~5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
