--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@nestjs/cli": "^11.0.5",
     "@nestjs/common": "^11.0.11",
+    "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.11",
     "@nestjs/platform-express": "^11.0.11",
     "@nestjs/swagger": "^11.0.6",
@@ -59,6 +60,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "openai": "^4.89.0",
     "reflect-metadata": "^0.2.2"
   }
 }
